refactor: standardize API errors and service boundaries